@@ -15,31 +15,44 @@ repositories {
     mavenCentral()
 }
 
-dependencies {
-    testImplementation platform('org.junit:junit-bom:6.0.0')
-    testImplementation 'org.junit.jupiter:junit-jupiter'
-    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
-}
+subprojects {
+    apply plugin: 'java'
 
-tasks.withType(JavaCompile).configureEach {
-    options.compilerArgs += [
-        '--add-modules', 'jdk.incubator.vector',
-        '--enable-preview'
-    ]
-}
+    group = rootProject.group
+    version = rootProject.version
 
-tasks.withType(Test).configureEach {
-    jvmArgs += [
-        '--add-modules', 'jdk.incubator.vector',
-        '--enable-preview',
-        '--enable-native-access=com.jamma.math'
-    ]
-    useJUnitPlatform()
-}
+    java {
+        toolchain {
+            languageVersion = JavaLanguageVersion.of(26)
+        }
+    }
 
-tasks.withType(JavaExec).configureEach {
-    jvmArgs += [
-        '--add-modules', 'jdk.incubator.vector',
-        '--enable-preview'
-    ]
+    repositories {
+        mavenCentral()
+    }
+
+    dependencies {
+        testImplementation platform('org.junit:junit-bom:6.0.0')
+        testImplementation 'org.junit.jupiter:junit-jupiter'
+        testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+    }
+
+    tasks.withType(JavaCompile).configureEach {
+        options.compilerArgs += [
+            '--enable-preview'
+        ]
+    }
+
+    tasks.withType(Test).configureEach {
+        jvmArgs += [
+            '--enable-preview'
+        ]
+        useJUnitPlatform()
+    }
+
+    tasks.withType(JavaExec).configureEach {
+        jvmArgs += [
+            '--enable-preview'
+        ]
+    }
 }
